--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM lokedhs/sbcl-quicklisp:latest
 
 RUN apt-get install -y git
 WORKDIR /root/quicklisp/local-projects
-RUN git clone git@github.com:own-pt/cl-conllu.git
+RUN git clone https://github.com/own-pt/cl-conllu.git
 
 RUN sbcl --quit --eval "(progn (ql:quickload :cl-conllu))"
 
